--- a/css/blocks.css
+++ b/css/blocks.css
@@ -64,3 +64,22 @@
 .button:hover {
   background-color: #15b8dc;
 }
+
+@media (max-width: 1024px) {
+  .logo {
+    width: 60px;
+    height: 60px;
+  }
+
+  .contacts__number {
+    font-size: 21px;
+  }
+
+  .contacts__button {
+    font-size: 13px;
+  }
+
+  .button {
+    padding: 11px 49px;
+  }
+}
