--- a/css/top.css
+++ b/css/top.css
@@ -27,3 +27,27 @@
   margin: 0 auto;
   max-width: 990px;
 }
+
+@media (max-width: 1024px) {
+  .top {
+    padding: 26px 0 70px;
+  }
+
+  .top__contacts {
+    margin-bottom: 70px;
+  }
+
+  .title {
+    font-size: 40px;
+    margin-bottom: 27.5px;
+  }
+
+  .text {
+    font-size: 18px;
+    margin-bottom: 60.5px;
+  }
+
+  .main-wrapper {
+    max-width: 780px;
+  }
+}
