--- a/css/bottom.css
+++ b/css/bottom.css
@@ -82,7 +82,6 @@
 
   .bottom__input {
     width: 379px;
-    border: 2px solid #fff;
     font-size: 20px;
     padding: 8px 23px;
   }
@@ -93,5 +92,40 @@
 
   .bottom__button {
     padding: 11px 38px;
+  }
+}
+
+
+@media (max-width: 380px) {
+  .bottom {
+    padding: 30px 0;
+  }
+
+  .bottom__title {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+
+  .bottom__text {
+    font-size: 12px;
+    margin-bottom: 35px;
+  }
+
+  .bottom__input-wrapper {
+    margin-bottom: 45px;
+  }
+
+  .bottom__input {
+    width: 290px;
+    font-size: 14px;
+    padding: 6px 18px;
+  }
+
+  .bottom__text-confirmation {
+    font-size: 11px;
+  }
+
+  .bottom__button {
+    padding: 10px 26px;
   }
 }
