--- a/css/center.css
+++ b/css/center.css
@@ -141,3 +141,52 @@
     font-size: 18px;
   }
 }
+
+
+
+@media(max-width: 934px) {
+  .center__list {
+    max-width: 410px;
+  }
+}
+
+
+
+@media (max-width: 380px) {
+  .center {
+    padding: 30px 0 60px;
+  }
+
+  .center__wrapper {
+    max-width: 290px;
+  }
+
+  .center__title {
+    font-size: 20px;
+    margin-bottom: 15px;
+  }
+
+  .center__about {
+    font-size: 16px;
+    max-width: 134px;
+  }
+
+  .center__about::before {
+    width: 19px;
+    top: 8px;
+  }
+
+  .center__about::after {
+    width: 19px;
+    bottom: 8px;
+  }
+
+  .center__text-main {
+    font-size: 12px;
+  }
+
+  .center__list {
+    max-width: 190px;
+    gap: 40px;
+  }
+}
