--- a/css/style.css
+++ b/css/style.css
@@ -101,3 +101,15 @@ fieldset {
   border: none;
   padding: 0;
 }
+
+@media (max-width: 480px) {
+  .container {
+    padding: 0 20px;
+  }
+}
+
+@media (max-width: 380px) {
+  .container {
+    padding: 0 15px;
+  }
+}
