--- a/index.css
+++ b/index.css
@@ -3,6 +3,6 @@
 @import "css/style.css";
 @import "css/blocks.css";
 @import "css/top.css";
-@import "css/center.css";
-@import "css/bottom.css";
+@import "css/about.css";
+@import "css/calls.css";
 @import "css/footer.css";
