--- a/css/about.css
+++ b/css/about.css
@@ -1,26 +1,27 @@
-.center {
+.about {
   text-align: center;
   padding: 70px 0;
 }
 
-.center__wrapper {
+.about__wrapper {
   display: inline-block;
   max-width: 724px;
   margin-bottom: 50px;
 }
 
-.center__title {
+.about__title {
   font-weight: 700;
   font-size: 35px;
   color: var(--grey);
   margin-bottom: 25px;
 }
 
-.center__text {
+.about__text {
   color: var(--grey);
 }
 
-.center__about {
+
+.about__us {
   margin: 0 auto;
   max-width: 189px;
   position: relative;
@@ -29,33 +30,33 @@
   margin-bottom: 35px;
 }
 
-.center__text-main {
+.about__text-main {
   font-size: 18px;
   line-height: 141%;
 }
 
-.center__about::before,
-.center__about::after {
+.about__us::before,
+.about__us::after {
   position: absolute;
   content: "";
   display: block;
   background-image: url(../img/ico/slash.svg);
 }
 
-.center__about::before {
+.about__us::before {
   width: 43px;
   height: 2px;
   top: 12px;
 }
 
-.center__about::after {
+.about__us::after {
   width: 43px;
   height: 2px;
   right: 0;
   bottom: 12px;
 }
 
-.center__list {
+.about__list {
   margin: 0 auto;
   max-width: 934px;
   display: flex;
@@ -63,13 +64,17 @@
   align-items: center;
   flex-wrap: wrap;
   gap: 50px;
+  counter-reset: count 0;
 }
 
-.center__item {
-  max-width: 196px;
+.about__item {
+  position: relative;
+  flex-basis: 196px;
+  flex-shrink: 2;
+  padding-top: 140px;
 }
 
-.center__img {
+.about__img {
   display: inline-block;
   border-radius: 100%;
   padding: 33px 45px;
@@ -77,67 +82,84 @@
   margin-bottom: 16px;
 }
 
-.centr__img-text {
+.about__img-text {
   font-weight: 500;
   font-size: 57px;
   line-height: 100%;
 }
 
-.center__item-text {
+.about__item-text {
   font-weight: 500;
   font-size: 20px;
   line-height: 141%;
   text-align: center;
 }
 
+.about__item-text::before {
+  position: absolute;
+  content: counter(count);
+  counter-increment: count;
+  display: block;
+  border-radius: 100%;
+  padding: 33px 45px;
+  background-color: var(--blue);
+  color: #fff;
+  font-weight: 500;
+  font-size: 57px;
+  line-height: 100%;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, 0%);
+}
+
 @media (max-width: 1024px) {
-  .center__wrapper {
+  .about__wrapper {
     max-width: 666px;
   }
 
-  .center__title {
+  .about__title {
     font-size: 32px;
     margin-bottom: 23px;
   }
 
-  .center__about {
+  .about__us {
     font-size: 20px;
     max-width: 174px;
   }
 
-  .center__about::before {
+  .about__us::before {
     width: 40px;
     top: 10px;
   }
 
-  .center__about::after {
+  .about__us::after {
     width: 40px;
     bottom: 10px;
   }
 
-  .center__text-main {
+  .about__text-main {
     font-size: 16px;
   }
 
-  .center__list {
+  .about__list {
     max-width: 870px;
   }
 
-  .center__item {
-    max-width: 180px;
+  .about__item {
+    flex-basis: 180px;
+    padding-top: 131px;
   }
 
-  .center__img {
-    padding: 21px 32px;
+  .about__item-text::before {
+    padding: 20px 33px;
     background-color: var(--blue);
-    margin-bottom: 26px;
   }
 
-  .centr__img-text {
+  .about__img-text {
     font-size: 52px;
   }
 
-  .center__item-text {
+  .about__item-text {
     font-size: 18px;
   }
 }
@@ -145,7 +167,7 @@
 
 
 @media(max-width: 934px) {
-  .center__list {
+  .about__list {
     max-width: 410px;
   }
 }
@@ -153,39 +175,39 @@
 
 
 @media (max-width: 380px) {
-  .center {
+  .about {
     padding: 30px 0 60px;
   }
 
-  .center__wrapper {
+  .about__wrapper {
     max-width: 290px;
   }
 
-  .center__title {
+  .about__title {
     font-size: 20px;
     margin-bottom: 15px;
   }
 
-  .center__about {
+  .about__us {
     font-size: 16px;
     max-width: 134px;
   }
 
-  .center__about::before {
+  .about__us::before {
     width: 19px;
     top: 8px;
   }
 
-  .center__about::after {
+  .about__us::after {
     width: 19px;
     bottom: 8px;
   }
 
-  .center__text-main {
+  .about__text-main {
     font-size: 12px;
   }
 
-  .center__list {
+  .about__list {
     max-width: 190px;
     gap: 40px;
   }
