--- a/css/calls.css
+++ b/css/calls.css
@@ -1,16 +1,16 @@
-.bottom {
+.calls {
   background-image: url(../img/mans-office.jpg);
   background-position: bottom;
 }
 
-.bottom__title {
+.calls__title {
   font-weight: 700;
   font-size: 35px;
   text-align: center;
   margin-bottom: 17px;
 }
 
-.bottom__text {
+.calls__text {
   font-weight: 500;
   font-size: 22px;
   text-align: center;
@@ -18,20 +18,19 @@
   margin-bottom: 50px;
 }
 
-.bottom__wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.calls__wrapper {
   margin-bottom: 50px;
 }
 
-.bottom__input-wrapper {
+.calls__input-wrapper {
+  margin: 0 auto;
+  max-width: 423px;
   margin-bottom: 50px;
 }
 
-.bottom__input {
+.calls__input {
   display: block;
-  width: 423px;
+  width: 100%;
   padding: 9px 25px;
   border: 1.38px solid #fff;
   outline: none;
@@ -40,15 +39,15 @@
   color: #fff;
 }
 
-.bottom__input:focus {
+.calls__input:focus {
   border-color: #15b8dc;
 }
 
-.bottom__input:not(:last-child) {
+.calls__input:not(:last-child) {
   margin-bottom: 20px;
 }
 
-.bottom__text-confirmation {
+.calls__text-confirmation {
   font-size: 20px;
   text-align: center;
 }
@@ -62,70 +61,73 @@
 }
 
 @media (max-width: 1024px) {
-  .bottom {
+  .calls {
     padding: 70px 0 56px;
   }
 
-  .bottom__title {
+  .calls__title {
     font-size: 32px;
     margin-bottom: 16px;
   }
 
-  .bottom__text {
+  .calls__text {
     font-size: 20px;
     margin-bottom: 50px;
   }
 
-  .bottom__wrapper {
+  .calls__wrapper {
     margin-bottom: 30px;
   }
 
-  .bottom__input {
-    width: 379px;
+  .calls__input-wrapper {
+    max-width: 379px;
+  }
+
+  .calls__input {
     font-size: 20px;
     padding: 8px 23px;
   }
 
-  .bottom__text-confirmation {
+  .calls__text-confirmation {
     font-size: 17px;
   }
 
-  .bottom__button {
+  .calls__button {
     padding: 11px 38px;
   }
 }
 
 
 @media (max-width: 380px) {
-  .bottom {
+  .calls {
     padding: 30px 0;
   }
 
-  .bottom__title {
+  .calls__title {
     font-size: 20px;
     margin-bottom: 10px;
   }
 
-  .bottom__text {
+  .calls__text {
     font-size: 12px;
     margin-bottom: 35px;
   }
 
-  .bottom__input-wrapper {
+  .calls__input-wrapper {
+    max-width: 290px;
     margin-bottom: 45px;
   }
 
-  .bottom__input {
-    width: 290px;
+  .calls__input {
     font-size: 14px;
     padding: 6px 18px;
   }
 
-  .bottom__text-confirmation {
+  .calls__text-confirmation {
     font-size: 11px;
   }
 
-  .bottom__button {
+  .calls__button {
     padding: 10px 26px;
   }
 }
