--- a/css/blocks.css
+++ b/css/blocks.css
@@ -1,7 +1,7 @@
 .section-bg {
   position: relative;
   background-position: center;
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   z-index: 0;
 }
@@ -26,8 +26,8 @@
 
 .contacts__number {
   display: block;
-  font-size: 23px;
-  margin-bottom: 3px;
+  font-size: 24px;
+  margin-bottom: 6px;
 }
 
 .contacts__button {
@@ -53,7 +53,7 @@
   display: inline-block;
   font-weight: 500;
   font-size: 20px;
-  padding: 12px 48px;
+  padding: 12.9px 48px;
   background-color: var(--blue);
   box-shadow: 0 4px 25px 0 rgba(21, 169, 203, 0.3);
   border-radius: 50px;
