--- a/css/calls.css
+++ b/css/calls.css
@@ -1,13 +1,15 @@
 .calls {
   background-image: url(../img/mans-office.jpg);
   background-position: bottom;
+  padding: 72px 0;
 }
 
 .calls__title {
   font-weight: 700;
   font-size: 35px;
   text-align: center;
-  margin-bottom: 17px;
+  padding-right: 24px;
+  margin-bottom: 18px;
 }
 
 .calls__text {
@@ -25,14 +27,14 @@
 .calls__input-wrapper {
   margin: 0 auto;
   max-width: 423px;
-  margin-bottom: 50px;
+  margin-bottom: 51px;
 }
 
 .calls__input {
   display: block;
   width: 100%;
-  padding: 9px 25px;
-  border: 1.38px solid #fff;
+  padding: 12px 25px;
+  border: 1px solid #fff;
   outline: none;
   border-radius: 50px;
   background-color: transparent;
@@ -50,6 +52,10 @@
 .calls__text-confirmation {
   font-size: 20px;
   text-align: center;
+}
+
+.calls__button {
+  padding: 12.9px 39px;
 }
 
 .confirmation {
