--- a/css/top.css
+++ b/css/top.css
@@ -30,7 +30,7 @@
 
 @media (max-width: 1024px) {
   .top {
-    padding: 26px 0 70px;
+    padding: 27px 0 70px;
   }
 
   .top__contacts {
@@ -39,12 +39,13 @@
 
   .title {
     font-size: 40px;
-    margin-bottom: 27.5px;
+    margin-bottom: 30px;
   }
 
   .text {
     font-size: 18px;
-    margin-bottom: 60.5px;
+    padding-left: 8.3px;
+    margin-bottom: 57.5px;
   }
 
   .main-wrapper {
