добавил картинки для 1024px

--- a/css/blocks.css
+++ b/css/blocks.css
@@ -1,6 +1,6 @@
 .section-bg {
   position: relative;
-  background-position: center;
+  background-position: top;
   background-size: cover;
   background-repeat: no-repeat;
   z-index: 0;
