--- a/css/top.css
+++ b/css/top.css
@@ -31,6 +31,7 @@
 @media (max-width: 1024px) {
   .top {
     padding: 27px 0 70px;
+    background-image: url(../img/office-1024.jpg);
   }
 
   .top__contacts {
