--- a/css/about.css
+++ b/css/about.css
@@ -179,16 +179,17 @@
 
 @media (max-width: 380px) {
   .about {
-    padding: 30px 0 60px;
+    padding: 31px 0 60px;
   }
 
   .about__wrapper {
     max-width: 290px;
+    margin-bottom: 34px;
   }
 
   .about__title {
     font-size: 20px;
-    margin-bottom: 15px;
+    margin-bottom: 18px;
   }
 
   .about__us {
@@ -197,13 +198,20 @@
   }
 
   .about__us::before {
-    width: 19px;
-    top: 8px;
+    width: 21px;
+    top: 9px;
   }
 
   .about__us::after {
-    width: 19px;
-    bottom: 8px;
+    width: 21px;
+    bottom: 7px;
+    right: 0;
+  }
+
+  .about__item-text::before {
+    top: 5px;
+    left: 49.5%;
+    padding: 25px 36.5px;
   }
 
   .about__text-main {
@@ -212,6 +220,6 @@
 
   .about__list {
     max-width: 190px;
-    gap: 40px;
+    gap: 37px;
   }
 }
