--- a/css/top.css
+++ b/css/top.css
@@ -56,21 +56,23 @@
 
 @media (max-width: 380px) {
   .top {
-    padding: 15px 0 65px;
+    background-image: url(../img/office-320.jpg);
+    padding: 13px 0 65px;
   }
 
   .top__contacts {
-    margin-bottom: 65px;
+    margin-bottom: 68px;
   }
 
   .title {
     font-size: 20px;
-    margin-bottom: 23px;
+    margin-bottom: 26px;
   }
 
   .text {
     font-size: 14px;
-    margin-bottom: 54px;
+    margin-bottom: 13px;
+    padding: 0;
   }
 
   .main-wrapper {
